docroot/sites/all/themes/custom/virginsport/src/scss/style/components/_vs-teaser.scss
/* ... */
// Landscape, Square
// ----------------------------------------------------------------------------

.vs-teaser--landscape-square {
  overflow: hidden;

  .vs-teaser__title {
    float: left;
    clear: both;
    z-index: 1;
    text-align: center;
  }

  .vs-teaser__text {
    margin-bottom: 2.5rem;
  }

  .vs-outline {
    margin-top: 0;
    margin-bottom: -1.6125rem;
    z-index: 3;
  }

  .vs-teaser__image-b {
    width: calc(100% + 1.875rem);
    margin-left: -.9375rem;
    height: auto;
    margin-top: -1.375rem;
    margin-bottom: 1.875rem;
  }

  $ls_xl_height: 26.8125rem;
  $ls_lg_height: 18.8125rem;
  $ls_md_height: 14.8125rem;

  @include media-breakpoint-up(sm) {
    .vs-outline {
      margin-bottom: 0;
    }
  }

  @include media-breakpoint-up(md) {
    min-height: $ls_md_height;

    .vs-teaser__col {
      min-height: $ls_md_height;
    }

    .vs-teaser__content {
      padding-left: 0;
      padding-bottom: 0;
    }

    .vs-teaser__title,
    .vs-teaser__subtitle,
    .vs-teaser__text {
      @include make-col(12);
    }

    .vs-teaser__title {
      text-align: left;
    }

    .vs-teaser__image-scale {
      @include transform(scale(.55));
      -webkit-transform-origin: top right;
      transform-origin: top right;
      float: right;
    }

    .vs-teaser__image-a,
    .vs-teaser__image-b {
      position: absolute;
    }

    .vs-teaser__image-a {
      width: 17.4375rem;
      margin: 0;
      top: 9.375rem;
      right: 0;
    }

    .vs-teaser__image-b {
      width: 30.25rem;
      margin-bottom: 0;
      right: 8.5625rem;
      top: 0;
    }
  }

  @include media-breakpoint-up(lg) {
    min-height: $ls_lg_height;

    .vs-teaser__col {
      min-height: $ls_lg_height;
    }

    .vs-teaser__content {
      padding-bottom: 5.8375rem;
    }

    .vs-teaser__subtitle,
    .vs-teaser__text {
      @include make-col(11);
    }

    .vs-outline {
      margin-top: -5.4375rem;
      margin-bottom: -1.4375rem;
    }

    .vs-teaser__image-scale {
      @include transform(scale(.7));
    }
  }

  @include media-breakpoint-up(xl) {
    min-height: $ls_xl_height;

    .vs-teaser__col {
      min-height: $ls_xl_height;
    }

    .vs-teaser__content {
      padding-bottom: 9.4375rem;
    }

    .vs-outline {
      margin-top: -8.8375rem;
    }

    .vs-teaser__image-scale {
      @include transform(scale(1));
    }
  }

  &.vs-teaser--reverse {
    @include media-breakpoint-up(md) {
      .vs-teaser__image-scale {
        float: none;
        right: auto;
      }

      .vs-teaser__title {
        text-align: right;
        float: right;
        padding-left: 0;
        max-width: none;
      }

      .vs-teaser__image-a {
        right: auto;
      }

      .vs-teaser__image-b {
        right: auto;
        margin-left: 5.625rem;
      }
    }

    @include media-breakpoint-up(xl) {
      .vs-teaser__title {
        padding-left: 18.8125rem;
        text-align: left;
        top: 0.25rem;
      }

      .col-md-5 {
        left: 56%;
      }
    }
  }
}
/* ... */

